# jp-tools

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  Screencast_20260223_091104.webm  docker-compose.yml
jp-core/: Cargo.toml
jp-core/migrations/: 002_create_dictionary_tables.sql  003_create_pitch_tables.sql  004_create_frequency_tables.sql
jp-core/src/: db.rs  lib.rs  tokenize.rs
jp-core/src/dictionary/: html.rs  mod.rs  tests.rs
jp-core/tests/: compound_headwords.txt  compound_tokenization.rs
jp-mine-core/: Cargo.toml
jp-mine-core/src/: config.rs  export.rs  lib.rs  lookup.rs
manga-mine/: CLAUDE.md  Cargo.toml
manga-ocr-service/: CLAUDE.md  README.md  main.py  requirements.txt
migrations/: 001_create_mining_tables.sql  002_create_dictionary_tables.sql
read-stats/: Cargo.toml  README.md  jp-stats-pause.sh
scripts/: add-compactdef-field.sh  start-all.sh  transcribe-docker.sh  transcribe.py  vn.sh
spec/: anki-compactdef.md  architecture.md  cold-start.md  data-model.md  features.md  index.md  knowledge-db.md  kotodex.md  open-questions.md  sentence-mining-manga.md  sentence-mining-yt.md  yomitan-integration.md
src/: app.rs  config.rs  db.rs  error.rs  main.rs  models.rs
templates/: base.html
vn-mine/: README.md  test_ws_logger.py  vn-buffer.service  vn-buffer.sh  vn-capture.sh  vn-record.sh  vn-screenshot.sh  vn-trim.py  vn-vad.py  vn-ws-logger.py
whisper-service/: CLAUDE.md  Dockerfile  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  (+1 more)
yt-mine/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requirements.txt
yt-mine/migrations/: 001_create_mining_tables.sql  003_create_pitch_tables.sql  004_add_video_id.sql  005_add_segments_found.sql  006_add_video_duration.sql  007_create_vocabulary_table.sql
yt-mine/scripts/: transcribe-docker.sh  transcribe.py
yt-mine/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
yt-mine/src/routes/: mod.rs
yt-mine/src/routes/api/: mod.rs  tests.rs
yt-mine/src/routes/mining/: mod.rs  tests.rs
yt-mine/src/routes/vocab/: mod.rs  tests.rs
yt-mine/src/services/: download.rs  export.rs  fake.rs  llm.rs  media.rs  mod.rs  pipeline.rs  tokenize.rs  transcribe.rs
yt-mine/src/services/dictionary/: html.rs  mod.rs  tests.rs
yt-mine/static/: api.js  app.js  router.js  state.js  style.css
yt-mine/static/components/: audio-player.js  export-result.js  job-status.js  sentence-list.js  sentence-row.js  submit-form.js  video-page.js  vocab-page.js  word-preview.js
yt-mine/static/features/mining/: audio-player.js  export-result.js  mining.css  sentence-list.js  sentence-row.js  state.js  submit-form.js  video-page.js  word-preview.js
yt-mine/static/features/vocab/: vocab-page.js  vocab.css
yt-mine/templates/: base.html  spa.html
yt-mine/templates/mining/: job_content_fragment.html  job_status.html  llm_definition_fragment.html  preview_fragment.html  submit.html
(+72 files in other folders)
