[package]
name = "jp-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }
serde = { version = "1", features = ["derive"] }
serde_html_form = "0.2"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"

[dev-dependencies]
axum-test = "18"
mockall = "0.13"
tempfile = "3"
