[package]
name = "jp-mine-core"
version = "0.1.0"
edition = "2024"

[features]
test-support = ["dep:mockall"]

[dependencies]
jp-core = { path = "../jp-core" }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["fs"] }
thiserror = "2"
tracing = "0.1"
base64 = "0.22.1"
mockall = { version = "0.13", optional = true }

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1", features = ["rt", "macros"] }
