[package]
name = "yt-mine"
version = "0.1.0"
edition = "2024"
default-run = "yt-mine"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
base64 = "0.22.1"
jp-core = { path = "../jp-core" }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
axum-test = "18"
jp-core = { path = "../jp-core", features = ["test-support"] }
mockall = "0.13"
tempfile = "3"
